--- a/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
+++ b/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
@@ -53,7 +53,7 @@
             <div class="table-responsive">
                 @if (@ViewBag.Enviar == 0)
                 {
-                    <h3 style="color:red;">Ya no puedes enviar a autorizar solicitudes, excediste el número</h3>
+                <h3 style="color:red;">"HAS EXCEDIDO TU LIMITE DE SOLICITUDES POR COMPROBAR"</h3>
                 }
                 <input type="text" value="@ViewBag.Enviar" id="ValidarAut" hidden/>
                 <table class="table table-striped" >
@@ -122,7 +122,7 @@
                                 </td>
                             }
                             @if (@item.Estatus == "Incompleta" || @item.Estatus == "PorAutorizar" || @item.Estatus == "Cerrada" ||
-                         @item.Estatus == "PorComprobar" || @item.Estatus == "PorLiberar" || @item.Estatus == "Rechazada" || @item.Estatus == "Cancelada" || @item.Estatus == "Revisada")
+                        @item.Estatus == "PorComprobar" || @item.Estatus == "PorLiberar" || @item.Estatus == "Rechazada" || @item.Estatus == "Cancelada" || @item.Estatus == "Revisada" || @item.Estatus=="Comprobada")
                             {
                                 <td>
                                     <a class="btn btn-lg">
@@ -200,7 +200,7 @@
                            
                         }
                         else if (item.estatus == "PorAutorizar" || item.estatus == "PorComprobar" ||
-                            item.estatus == "PorLiberar" || item.estatus == "Rechazada" || item.estatus == "Cancelada" || item.estatus =="Revisada" || item.estatus == "Cerrada")
+                            item.estatus == "PorLiberar" || item.estatus == "Rechazada" || item.estatus == "Cancelada" || item.estatus == "Revisada" || item.estatus == "Cerrada" || item.estatus =="Comprobada")
                         {
                             if (item.importeComprobado > item.importeSolicitado) {
                                 row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + item.importeSolicitadoC + "</td><td style='color:red;'>" + item.importeComprobadoC + "</td><td>" + item.importeExcedenteC + "</td><td>" + item.estatus +
