--- a/TravelExpenses/Views/Comprobacion/Detalles.cshtml
+++ b/TravelExpenses/Views/Comprobacion/Detalles.cshtml
@@ -24,7 +24,7 @@
     <div class="card">
         <div class="card-body">
 
-            <form method="post" asp-controller="Aprobador" asp-action="Detalles">
+            <form method="post" asp-controller="Comprobacion" asp-action="Detalles">
 
                 <div class="form-group">
                     <div class="row">
