--- a/TravelExpenses/Views/Comprobacion/ComprobacionSolicitud.cshtml
+++ b/TravelExpenses/Views/Comprobacion/ComprobacionSolicitud.cshtml
@@ -21,15 +21,16 @@
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
-                        <tr>
-                            <th>Folio</th>
-                            <th>Tipo Solicitud</th>
-                            <th>Solicitante</th>
-                            <th>Cantidad Solicitada</th>
-                            <th>Cantidad Comprobada</th>
-                            <th>Estatus</th>
-                            <th>Editar</th>
-                        </tr>
+                            <tr>
+                                <th>Folio</th>
+                                <th>Tipo Solicitud</th>
+                                <th>Solicitante</th>
+                                <th>Cantidad Solicitada</th>
+                                <th>Cantidad Comprobada</th>
+                                <th>Total</th>
+                                <th>Estatus</th>
+                                <th>Editar</th>
+                            </tr>
                         </thead>
                         <tbody id="tblSolicitud">
                         @foreach (var item in Model.Solicitudes)
@@ -38,9 +39,9 @@
                                 <td>@item.Folio</td>
                                 <td>@item.Descripcion</td>
                                 <td>@item.UserName</td>
-                                <td>@string.Format("{0:C}",item.ImporteSolicitado )</td>
+                                <td>@string.Format("{0:C}", item.ImporteSolicitado)</td>
                                 <td>@string.Format("{0:C}", item.ImporteComprobado) </td>
-
+                                <td>@string.Format("{0:C}", item.Total) </td>
                                 <td>@item.Estatus</td>
 
                                 <td>
@@ -97,7 +98,8 @@
                                     + '<td>' + item.descripcion +'</td>'
                                     + '<td>' + item.userName +'</td>'
                                     + '<td>' + item.importeSolicitadoC +'</td>'
-                                    + '<td>' + item.importeComprobadoC +'</td>'
+                            + '<td>' + item.importeComprobadoC + '</td>'
+                            + '<td>' + item.totalC + '</td>'
                                     + '<td>' + item.estatus+'</td>'
                                     + '<td>'
                             +'<a class="btn btn-lg" href="/Comprobacion/DetallesPorAutorizar?folio=' + item.folio + '">'
@@ -114,7 +116,8 @@
                                 + '<td>' + item.descripcion +'</td>'
                                 + '<td>' + item.userName +'</td>'
                                 + '<td>' + item.importeSolicitadoC +'</td>'
-                                + '<td>' + item.importeComprobadoC +'</td>'
+                            + '<td>' + item.importeComprobadoC + '</td>'
+                            + '<td>' + item.totalC + '</td>'
                                 + '<td>' + item.estatus+'</td>'
                                 + '<td>'
                             +'<a class="btn btn-lg"  href="/Comprobacion/Detalles?folio=' + item.folio + '">'
