--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -261,7 +261,7 @@
                                 if (item.mensajeError != null) {
                                     mensaje = "<label class='alert-danger'>" + item.mensajeError + "</label>";
                                 }
-
+                                //comment
                                 row += "<tr><td>" + mensaje + item.folio + "</td><td>"
                                     + item.uuid + "</td><td>"
                                     + item.fecha + "</td><td>"
