--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -158,7 +158,7 @@
                                     Detalles
                                 </th>
                                 <th>
-                                    Archivo(s)
+                                    Extensión
                                 </th>
                                 <th>
                                     Descargar
@@ -204,7 +204,7 @@
                                     }
                                 </td>
                                 <td align="center">
-                                    @String.Join(",", comprobante.Archivos.Select(x => x.NombreArchivo))
+                                    @String.Join(",", comprobante.Archivos.Select(x => x.Extension))
                                 </td>
                                 <td align="center">
                                     <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Download" asp-route-UUID="@comprobante.UUID">
@@ -257,10 +257,17 @@
                                 console.log(item);
 
                                 var mensaje = '';
+                                var nombreArchivo = '';
 
                                 if (item.mensajeError != null) {
                                     mensaje = "<label class='alert-danger'>" + item.mensajeError + "</label>";
                                 }
+
+                                if (item.archivos != null)
+                                {
+                                    nombreArchivo = item.archivos[0].extension
+                                }
+
                                 //comment
                                 row += "<tr><td>" + mensaje + item.folio + "</td><td>"
                                     + item.uuid + "</td><td>"
@@ -270,7 +277,7 @@
                                     + item.moneda + "</td><td>"
                                     + item.total + "</td><td>"
                                     + item.importeComprobado + "</td><td><a class='btn btn - lg' href = '/Rembolso/Details?UUID=" + item.uuid
-                                    + "'><i class='fas fa-info-circle'></i></a></td><td>" + if (item.archivos != null) { item.archivos[0].nombreArchivo } 
+                                    + "'><i class='fas fa-info-circle'></i></a></td><td>" + nombreArchivo 
                                     + "</td><td><a class='btn btn - lg' href='/Rembolso/Download?UUID=" + item.uuid
                                     + "'><i class='fas fa-download'></i></a></td><td><a class='btn btn-lg' href='/Rembolso/Delete?UUID=" + item.uuid
                                     + "'><i class='fas fa-eraser'></i></a></td></tr>";
